Code style refactoring.